# gats

./: .env  Cargo.toml  INSTRUCTIONS.md
src/: crud.rs  main.rs  models.rs
src/ui/: main_menu.rs  members.rs  mod.rs  project_dialog.rs  projects.rs  sprints.rs  tasks.rs
src/ui/dialog/: confirm_delete.rs  create.rs  error.rs  mod.rs  project.rs  sprint.rs  task.rs
